--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest --verbose",
+    "open:coverage": "open coverage/lcov-report/index.html",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:config": "jest --config=<rootDir>/jest.config.ts",
     "lint": "ng lint"
   },
   "private": true,
@@ -41,7 +45,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@ngrx/eslint-plugin": "^16.3.0",
     "@ngrx/schematics": "^16.3.0",
-    "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "autoprefixer": "^10.4.16",
@@ -51,15 +55,12 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jasmine": "^4.1.3",
     "eslint-plugin-prettier": "^5.0.1",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^13.1.4",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.2",
     "typescript": "~5.1.3"
   }
 }
